# P13-Multi-Agent-Customer-Support

./: .gitignore  pyproject.toml
app/: main.py
app/agent/supervisor/: supervisor.py
app/agent/workers/: billing_worker.py  tech_worker.py
app/api/: router.py
app/core/: agent_state.py  config.py  tools.py
app/schemas/: request_schema.py  response_schema.py
